# fimd

./: .npmrc  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  testfile.md
.github/: prepare.cjs
.github/workflows/: publish.yml
js/: package.json
js/src/lib/: index.mjs
rs/: Cargo.toml
rs/src/: lib.rs  main.rs  parser.rs
src/: bin.mjs
src/lib/: debug.mjs  index.mjs  plugin.mjs
src/lib/plugin/: blockquote.mjs  break.mjs  code.mjs  definition.mjs  delete.mjs  emphasis.mjs  footnote.mjs  footnoteDefinition.mjs  footnoteReference.mjs  heading.mjs  html.mjs  image.mjs  imageReference.mjs  inlineCode.mjs  link.mjs  linkReference.mjs  list.mjs  listItem.mjs  paragraph.mjs  strong.mjs  table.mjs  tableCell.mjs  tableRow.mjs  text.mjs  thematicBreak.mjs  yaml.mjs
