[package]
name = "fimd"
version = "0.0.0"
description = "Simple tool to convert markdown files to Fimfiction BBCode"
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
include = ["src"]

[dependencies]
ahash = "0.8.6"
hashbrown = "0.14.3"
markdown = "1.0.0-alpha.16"
